--- a/Notebook Python.ipynb
+++ b/Notebook Python.ipynb
@@ -32,107 +32,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ea5ab5ad",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Insira o primeiro numero: 0\n",
-      "Insira o segundo numero: 1\n",
-      "Resultado: 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def estadoQ0(fita, posFita):\n",
-    "    if fita[posFita] == 'B':\n",
-    "        posFita = posFita + 1\n",
-    "        estadoQ1(fita, posFita)\n",
+    "class MT:\n",
+    "    #dicionario funções de transição : estado atual -> transição correspondente\n",
+    "    funcoes_transicao = {(\"q0\", \"B\") : (\"q1\",\"B\",\"D\") ,\n",
+    "                                (\"q1\",\"1\") : (\"q1\",\"1\",\"D\"),\n",
+    "                                (\"q1\",\"0\") : (\"q1\",\"0\",\"D\"),\n",
+    "                                (\"q1\",\"B\") : (\"q2\",\"B\",\"D\"),\n",
     "\n",
-    "def estadoQ1(fita, posFita):\n",
-    "    if fita[posFita] == '0' or fita[posFita] == '1':\n",
-    "        posFita = posFita + 1\n",
-    "        estadoQ1(fita, posFita)\n",
-    "    else:\n",
-    "        posFita = posFita + 1\n",
-    "        estadoQ2(fita, posFita)\n",
+    "                                (\"q2\",\"1\") : (\"q2\",\"1\",\"D\"),\n",
+    "                                (\"q2\",\"0\") : (\"q2\",\"0\",\"D\"),\n",
+    "                                (\"q2\",\"B\") : (\"q3\",\"B\",\"E\"),\n",
     "\n",
-    "def estadoQ2(fita, posFita):\n",
-    "    if fita[posFita] == '0' or fita[posFita] == '1':\n",
-    "        posFita = posFita + 1\n",
-    "        estadoQ2(fita, posFita)\n",
-    "    else:\n",
-    "        posFita = posFita - 1\n",
-    "        estadoQ3(fita, posFita)\n",
+    "                                (\"q3\",\"1\") : (\"q4\",\"0\",\"E\"),\n",
+    "                                (\"q3\",\"0\") : (\"q3\",\"1\",\"E\"),\n",
+    "                                (\"q3\",\"B\") : (\"q6\",\"B\",\"D\"),  \n",
     "\n",
-    "def estadoQ3(fita, posFita):\n",
-    "    if fita[posFita] == '0':\n",
-    "        fita[posFita] = '1'\n",
-    "        posFita = posFita - 1\n",
-    "        estadoQ3(fita, posFita)\n",
-    "    elif fita[posFita] == '1':\n",
-    "        fita[posFita] = '0'\n",
-    "        posFita = posFita - 1\n",
-    "        estadoQ4(fita, posFita)\n",
-    "    else:\n",
-    "        posFita = posFita + 1\n",
-    "        estadoQ6(fita, posFita)\n",
+    "                                (\"q4\",\"1\") : (\"q4\",\"1\",\"E\"),\n",
+    "                                (\"q4\",\"0\") : (\"q4\",\"0\",\"E\"),\n",
+    "                                (\"q4\",\"B\") : (\"q5\",\"B\",\"E\"),\n",
     "\n",
-    "def estadoQ4(fita, posFita):\n",
-    "    if fita[posFita] == '0' or fita[posFita] == '1':\n",
-    "        posFita = posFita - 1\n",
-    "        estadoQ4(fita, posFita)\n",
-    "    else:\n",
-    "        posFita = posFita - 1\n",
-    "        estadoQ5(fita, posFita)\n",
+    "                                (\"q5\",\"1\") : (\"q5\",\"0\",\"E\"),\n",
+    "                                (\"q5\",\"0\") : (\"q1\",\"1\",\"D\"),\n",
+    "                                \n",
+    "                                (\"q5\",\"B\") : (\"q1\",\"1\",\"D\"),\n",
     "\n",
-    "def estadoQ5(fita, posFita):\n",
-    "    if posFita == 0:\n",
-    "        fita.insert(0, 'B')\n",
-    "        posFita = posFita + 1\n",
+    "                                (\"q6\",\"1\") : (\"q6\",\"B\",\"D\"),\n",
+    "                                (\"q6\",\"B\") : (\"qf\",\"B\",\"D\")\n",
+    "        }\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.__fita = ['B']\n",
+    "        self.__estados = [\"q0\", \"q1\", \"q2\", \"q3\", \"q4\", \"q5\", \"q6\"]\n",
+    "        self.__alfabetoEntrada = ['0', '1']\n",
+    "        self.__alfabetoFita = ['0' , '1' , 'B']\n",
+    "        self.__cabeca = ['q0', 'B'] #estado atual da maquina\n",
+    "        self.__indice = 0 #podição atual da cabeça de gravação\n",
     "\n",
     "\n",
-    "    if fita[posFita] == '1':\n",
-    "        fita[posFita] = '0'\n",
-    "        posFita = posFita - 1\n",
-    "        estadoQ5(fita, posFita)\n",
-    "    else:\n",
-    "        fita[posFita] = '1'\n",
-    "        posFita = posFita + 1\n",
+    "    def executa(self): #inicia execucao da soma\n",
+    "        while(self.__cabeca[0] != \"qf\"): #enquanto o estado atual da maquina nao for o final\n",
+    "            estadoAtual = self.__cabeca #pego o estado atual dela\n",
+    "            valorCorrespondente = MT.funcoes_transicao.get(tuple(estadoAtual)) #pego a transição correspondente a este estado\n",
+    "            self.transicao(valorCorrespondente) #realizo a transição de fato, passando como argumento a tupla que descreve a transição\n",
+    "            \n",
+    "    def transicao(self, proximo): \n",
+    "        (proximoEstado, escrita, direcao) = proximo #proximo = proxEstado da fita - caractere que deve ser escrito - direção do movimento\n",
     "\n",
-    "        estadoQ1(fita, posFita)\n",
+    "        self.__fita[self.__indice] = escrita #escrevero o caractere na posição atual\n",
     "\n",
-    "def estadoQ6(fita, posFita):\n",
-    "    if fita[posFita] == '1':\n",
-    "        fita[posFita] = 'B'\n",
-    "        posFita = posFita + 1\n",
-    "        estadoQ6(fita, posFita)\n",
-    "    else:\n",
-    "        while('B' in fita):\n",
-    "            fita.remove('B')\n",
-    "        novaFita = ''.join(fita)\n",
-    "        print(\"Resultado: \" + novaFita)\n",
+    "        if(proximoEstado != \"qf\"): \n",
+    "            #atualizo o indice/posição atual somente se o proximo estado não for final,\n",
+    "            # caso contrário atualizar o indice faŕa com que ele esteja fora dos limites da fita\n",
+    "            if(self.__indice == 0):\n",
+    "                self.__fita.insert(0, 'B')\n",
+    "                self.__indice += 1\n",
     "\n",
     "\n",
-    "vetorFita = ['B']\n",
+    "            if(direcao == 'D'): \n",
+    "                self.__indice += 1\n",
+    "            else:\n",
+    "                self.__indice -= 1\n",
+    "\n",
+    "        proxCaractere = self.__fita[self.__indice] \n",
+    "        #depois do indice atual ser atualizado, eu pego o caractere apontado por esse indice\n",
+    "\n",
+    "        self.__cabeca = [proximoEstado, proxCaractere]\n",
+    "        #atualizo a o estado atual da máquina \n",
+    "\n",
+    "\n",
+    "    def recebe_Entrada(self, numero1, numero2):\n",
+    "        \n",
+    "        for x in list(numero1):\n",
+    "            self.__fita.append(x)\n",
+    "\n",
+    "        self.__fita.append('B')\n",
+    "\n",
+    "        for x in list(numero2):\n",
+    "            self.__fita.append(x)\n",
+    "        \n",
+    "        self.__fita.append('B')\n",
+    "\n",
+    "    def devolveFita(self):\n",
+    "        while('B' in self.__fita):\n",
+    "            self.__fita.remove('B')\n",
+    "        \n",
+    "        fita = ''.join(self.__fita)\n",
+    "        print(fita)\n",
+    "        \n",
+    "minhaMaquina = MT()\n",
     "\n",
     "primeiroNumero = input(\"Insira o primeiro numero: \")\n",
     "segundoNumero = input(\"Insira o segundo numero: \")\n",
     "\n",
-    "for x in list(primeiroNumero):\n",
-    "    vetorFita.append(x)\n",
-    "\n",
-    "vetorFita.append('B')\n",
-    "\n",
-    "for x in list(segundoNumero):\n",
-    "    vetorFita.append(x)\n",
-    "\n",
-    "vetorFita.append('B')\n",
-    "\n",
-    "estadoQ0(vetorFita, 0)"
+    "minhaMaquina.recebe_Entrada(primeiroNumero, segundoNumero)\n",
+    "minhaMaquina.executa()\n",
+    "minhaMaquina.devolveFita()"
    ]
   },
   {
